# near-seed-phrase-py

./: .gitignore  README.md  index.py  pyproject.toml  setup.py
near_seed_phrase/: __init__.py  main.py
near_seed_phrase/utils/: __init__.py
src/: main.py
src/test/: main.test.py
tests/: main.test.py
